Add git ommix settings
- large_files : value for the git ommix setting for largefiles
- default_provider : to set a default provider to use

--- a/example.conf
+++ b/example.conf
@@ -7,3 +7,5 @@
 # By default it is set locally to the user.
 # A global folder can be used. Beware of permissions. It is advised to create a git-ommix group.
 GIT_OMMIX_REPO_DIR="$HOME/GitOmmix"
+GIT_OMMIX_LARGE_FILES='largerthan=1Mb or include=data/* or include=results/*'
+GIT_OMMIX_DEFAULT_PROVIDER="gitommix <gitommix>"
