Add configurable dot output

--- a/example.conf
+++ b/example.conf
@@ -9,3 +9,4 @@
 GIT_OMMIX_REPO_DIR="$HOME/GitOmmix"
 GIT_OMMIX_LARGE_FILES='largerthan=100Mb and (include=data/* or include=results/*)'
 GIT_OMMIX_DEFAULT_AUTHOR="gitommix <gitommix>"
+GIT_OMMIX_DEFAULT_DOT_OUTPUT="x11"
